# voice-research-agent

./: README.md
backend/: agent.py  pyproject.toml  requirements.txt  token_server.py
backend/rag/: ingest.py  ingest_lib.py  vector_store.py
backend/tools/: query_papers.py  search_web.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.css
